fixed some spacing stuff, still only waiting on the js files of Alan

--- a/kenya/patients/static/css/message.css
+++ b/kenya/patients/static/css/message.css
@@ -28,7 +28,7 @@ background-color: rgb(168,140,91);
 }
 
 .Body{
-margin-top: 500px;
+margin-top: 150px;
 }
 
 .Boxes
@@ -37,6 +37,7 @@ position: fixed;
 width: 100%;
 height: 100px;
 top: 0px;
+background-color: rgb(255,255,255);
 }
 
 .Box{
